# ai-code-explainer

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: auth.py  config.py  main.py  models.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: explain.py
apps/api/app/routes/: __init__.py  explain.py
apps/api/app/schemas/: explanation.py
apps/api/app/services/: ai_factory.py  gemini_service.py  ollama_service.py
apps/api/app/services/llm/: gemini_client.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/explainer/: page.tsx
apps/web/src/components/auth/: auth-buttons.tsx
apps/web/src/components/editor/: monaco-code-editor.tsx
apps/web/src/components/explain/: explanation-panel.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  select.tsx
apps/web/src/features/code-explainer/components/: code-explainer-workspace.tsx
apps/web/src/features/code-explainer/constants/: languages.ts
apps/web/src/lib/: api.ts  config.ts
apps/web/src/types/: api.ts
